// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render all the compoents 1`] = `
<div>
  <div
    class="hv-uikit-css-kdjrpy hv-uikit-css-1ox5ug HvIsCardGridElement HvCard-root"
  >
    <div
      class="hv-uikit-css-emolmc HvCard-semanticContainer"
    >
      <div
        class="hv-uikit-css-1v84tfs hv-uikit-css-1hhae7u HvCard-semanticBar"
      />
      <div
        class="hv-uikit-css-pzj2c4 HvCard-icon"
      />
    </div>
    <div
      class="MuiCardHeader-root hv-uikit-css-pqwkee HvCard-Header-root css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title hv-uikit-css-1weuf4q HvCard-Header-title hv-uikit-css-0 css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader hv-uikit-css-1weuf4q HvCard-Header-subheader hv-uikit-css-0 css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root hv-uikit-css-8atqhb HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      role="img"
    />
    <div
      class="MuiCardContent-root hv-uikit-css-1ly90im HvCard-Content-content css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render content 1`] = `
<div>
  <div
    class="hv-uikit-css-kdjrpy hv-uikit-css-1ox5ug HvIsCardGridElement HvCard-root"
  >
    <div
      class="hv-uikit-css-emolmc HvCard-semanticContainer"
    >
      <div
        class="hv-uikit-css-1v84tfs hv-uikit-css-1hhae7u HvCard-semanticBar"
      />
      <div
        class="hv-uikit-css-pzj2c4 HvCard-icon"
      />
    </div>
    <div
      class="MuiCardContent-root hv-uikit-css-1ly90im HvCard-Content-content css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render correctly 1`] = `
<div>
  <div
    class="hv-uikit-css-kdjrpy hv-uikit-css-1ox5ug HvIsCardGridElement HvCard-root"
  >
    <div
      class="hv-uikit-css-emolmc HvCard-semanticContainer"
    >
      <div
        class="hv-uikit-css-1v84tfs hv-uikit-css-1hhae7u HvCard-semanticBar"
      />
      <div
        class="hv-uikit-css-pzj2c4 HvCard-icon"
      />
    </div>
  </div>
</div>
`;

exports[`Card > should render header 1`] = `
<div>
  <div
    class="hv-uikit-css-kdjrpy hv-uikit-css-1ox5ug HvIsCardGridElement HvCard-root"
  >
    <div
      class="hv-uikit-css-emolmc HvCard-semanticContainer"
    >
      <div
        class="hv-uikit-css-1v84tfs hv-uikit-css-1hhae7u HvCard-semanticBar"
      />
      <div
        class="hv-uikit-css-pzj2c4 HvCard-icon"
      />
    </div>
    <div
      class="MuiCardHeader-root hv-uikit-css-pqwkee HvCard-Header-root css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title hv-uikit-css-1weuf4q HvCard-Header-title hv-uikit-css-0 css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader hv-uikit-css-1weuf4q HvCard-Header-subheader hv-uikit-css-0 css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render image 1`] = `
<div>
  <div
    class="hv-uikit-css-kdjrpy hv-uikit-css-1ox5ug HvIsCardGridElement HvCard-root"
  >
    <div
      class="hv-uikit-css-emolmc HvCard-semanticContainer"
    >
      <div
        class="hv-uikit-css-1v84tfs hv-uikit-css-1hhae7u HvCard-semanticBar"
      />
      <div
        class="hv-uikit-css-pzj2c4 HvCard-icon"
      />
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root hv-uikit-css-8atqhb HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      role="img"
    />
  </div>
</div>
`;
